styles(rwd): Fixed scrolling experience and projects margin on mobile views

--- a/src/components/layout/Experience/ExperienceList.module.scss
+++ b/src/components/layout/Experience/ExperienceList.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   gap: 0;
   margin-top: 48px;
+  height: 100%;
 }
 
 @media (max-width: #{breakpoint-mobile}) {
