--- a/src/components/layout/Projects/ProjectsList.module.scss
+++ b/src/components/layout/Projects/ProjectsList.module.scss
@@ -2,7 +2,7 @@
 
 .scrollSection {
   position: relative;
-  height: 400vh;
+  min-height: 400vh;
   width: 100%;
 }
 
@@ -20,7 +20,6 @@
   flex-direction: row;
   align-items: center;
   gap: 48px;
-  padding: 0 5%;
 }
 
 .projectsHeader {
@@ -73,7 +72,6 @@
   .scrollSection {
     height: auto;
     min-height: 100vh;
-    padding: 32px 0;
   }
 
   .projectsContainer {
@@ -82,7 +80,6 @@
     align-items: stretch;
     height: auto;
     min-height: 100vh;
-    padding: 0 0 32px 0;
   }
 
   .projectsHeader {
